--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,8 @@ body {
   font-family: sans-serif;
   color: #354358;
 }
+
+.rootStyle{
+  font-size: 1rem;
+  font-size: clamp(1rem, 0.95rem + 0.25vw, 1.25rem);
+}
